# feature_detection_service

./: .pylintrc  CHANGELOG.md  Dockerfile  README.md  compose.service.yaml  example.env  fds.py  fds_cli.py  features.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/cli_configs/: akaze_features.json  charuco_board.json  orb_features.json  sift_features.json
scripts/: build_dist_tarball.sh  generate_openapi.py  run_pylint.sh
test/: TEST_README.md  __init__.py  conftest.py  test_cli.py  test_fds.py  test_integration.py  test_load_image.py  test_patterns.py
